--- a/Frontend/checkout.html
+++ b/Frontend/checkout.html
@@ -79,12 +79,12 @@
 						    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
 						      <div class="card-body">
 						        <div class="billing-address-form">
-						        	<form action="index.html">
-						        		<p><input type="text" placeholder="Name"></p>
-						        		<p><input type="email" placeholder="Email"></p>
-						        		<p><input type="text" placeholder="Address"></p>
-						        		<p><input type="tel" placeholder="Phone"></p>
-						        		<p><textarea name="bill" id="bill" cols="30" rows="10" placeholder="Say Something"></textarea></p>
+						        	<form id="billingForm" action="index.html">
+						        		<p><input type="text" id="customerName" placeholder="Name" required></p>
+						        		<p><input type="email" id="customerEmail" placeholder="Email" required></p>
+						        		<p><input type="text" id="customerAddress" placeholder="Address" required></p>
+						        		<p><input type="tel" id="customerPhone" placeholder="Phone" required></p>
+						        		<p><textarea name="bill" id="billMessage" cols="30" rows="10" placeholder="Say Something (optional)"></textarea></p>
 						        	</form>
 						        </div>
 						      </div>
@@ -137,36 +137,10 @@
 								</tr>
 							</thead>
 							<tbody class="order-details-body">
-								<tr>
-									<td>Product</td>
-									<td>Total</td>
-								</tr>
-								<tr>
-									<td>Strawberry</td>
-									<td>Rs 85.00</td>
-								</tr>
-								<tr>
-									<td>Berry</td>
-									<td>Rs 70.00</td>
-								</tr>
-								<tr>
-									<td>Lemon</td>
-									<td>Rs 35.00</td>
-								</tr>
+								<!-- Cart items will be dynamically populated by JavaScript -->
 							</tbody>
 							<tbody class="checkout-details">
-								<tr>
-									<td>Subtotal</td>
-									<td>Rs 190</td>
-								</tr>
-								<tr>
-									<td>Shipping</td>
-									<td>Rs 50</td>
-								</tr>
-								<tr>
-									<td>Total</td>
-									<td>Rs 240</td>
-								</tr>
+								<!-- Subtotal, Shipping, and Total will be dynamically populated by JavaScript -->
 							</tbody>
 						</table>
 						<a href="#" class="boxed-btn">Place Order</a>
@@ -230,6 +204,8 @@
 	<script src="{% static 'js/sticker.js' %}"></script>
 	<!-- main js -->
 	<script src="{% static 'js/main.js' %}"></script>
+	<!-- checkout js -->
+	<script src="{% static 'js/checkout.js' %}"></script>
 
 </body>
 </html>
