--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -66,20 +66,20 @@
 				<div class="col-lg-8 mb-5 mb-lg-0">
 					<div class="form-title">
 						<h2>Have you any question?</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, ratione! Laboriosam est, assumenda. Perferendis, quo alias quaerat aliquid. Corporis ipsum minus voluptate? Dolore, esse natus!</p>
+						<p>We're here to help! Whether you need information about our dental products, have questions about your order, or want to learn more about our services, our friendly team is ready to assist you. Fill out the form below and we'll get back to you as soon as possible.</p>
 					</div>
 				 	<div id="form_status"></div>
 					<div class="contact-form">
-						<form type="POST" id="DentalCom-contact" onSubmit="return valid_datas( this );">
+						<form type="POST" id="contactForm">
 							<p>
-								<input type="text" placeholder="Name" name="name" id="name">
-								<input type="email" placeholder="Email" name="email" id="email">
+								<input type="text" placeholder="Name" name="name" id="contactName" required>
+								<input type="email" placeholder="Email" name="email" id="contactEmail" required>
 							</p>
 							<p>
-								<input type="tel" placeholder="Phone" name="phone" id="phone">
-								<input type="text" placeholder="Subject" name="subject" id="subject">
+								<input type="tel" placeholder="Phone" name="phone" id="contactPhone" required>
+								<input type="text" placeholder="Subject" name="subject" id="contactSubject" required>
 							</p>
-							<p><textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea></p>
+							<p><textarea name="message" id="contactMessage" cols="30" rows="10" placeholder="Message" required></textarea></p>
 							<input type="hidden" name="token" value="FsWga4&@f6aw" />
 							<p><input type="submit" value="Submit"></p>
 						</form>
@@ -88,16 +88,16 @@
 				<div class="col-lg-4">
 					<div class="contact-form-wrap">
 						<div class="contact-form-box">
-							<h4><i class="fas fa-map"></i> Shop Address</h4>
-							<p>34/8, East Hukupara <br> Gifirtok, Sadan. <br> Country Name</p>
+							<h4><i class="fas fa-map"></i> Office Address</h4>
+							<p>Main Office<br>Karachi, Pakistan<br>Near City Center</p>
 						</div>
 						<div class="contact-form-box">
-							<h4><i class="far fa-clock"></i> Shop Hours</h4>
-							<p>MON - FRIDAY: 8 to 9 PM <br> SAT - SUN: 10 to 8 PM </p>
+							<h4><i class="far fa-clock"></i> Business Hours</h4>
+							<p>MON - FRIDAY: 9 AM to 6 PM<br> SAT: 9 AM to 2 PM<br> SUN: Closed</p>
 						</div>
 						<div class="contact-form-box">
 							<h4><i class="fas fa-address-book"></i> Contact</h4>
-							<p>Phone: +00 111 222 3333 <br> Email: support@DentalCom.com</p>
+							<p>Phone: 0300 9845333<br>Email: info@dentalcom.com</p>
 						</div>
 					</div>
 				</div>
@@ -120,7 +120,7 @@
 
 	<!-- google map section -->
 	<div class="embed-responsive embed-responsive-21by9">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26432.42324808999!2d-118.34398767954286!3d34.09378509738966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bf07045279bf%3A0xf67a9a6797bdfae4!2sHollywood%2C%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1576846473265!5m2!1sen!2sbd" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="embed-responsive-item"></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.0058397054314!2d67.0288999142206!3d24.850098949029666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33c4c0e5ab8cd%3A0x2378e7be1aa3b9a8!2sKarachi%2C%20Sindh%2C%20Pakistan!5e0!3m2!1sen!2sbd!4v1634567890123!5m2!1sen!2sbd" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="embed-responsive-item"></iframe>
 	</div>
 	<!-- end google map section -->
 
@@ -151,6 +151,8 @@
 	<script src="{% static 'js/form-validate.js' %}"></script>
 	<!-- main js -->
 	<script src="{% static 'js/main.js' %}"></script>
+	<!-- contact js -->
+	<script src="{% static 'js/contact.js' %}"></script>
 	
 </body>
 </html>
